crates/protocol/src/snapshots/cookie_agent_protocol__tests__agent_list_schema.snap
---
source: crates/protocol/src/tests.rs
expression: schema_for!(AgentListResult)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "AgentListResult",
  "type": "object",
  "properties": {
    "agents": {
      "type": "array",
      "items": {
        "$ref": "#/$defs/AgentDescriptor"
      },
      "maxItems": 4096
    },
    "generated_at": {
      "type": "string",
      "format": "date-time"
    },
    "model_revision": {
      "description": "SHA-256 snapshot revision.",
      "type": "string",
      "maxLength": 71,
      "minLength": 1,
      "pattern": "^sha256:[0-9a-f]{64}$"
    },
    "revision": {
      "description": "SHA-256 snapshot revision.",
      "type": "string",
      "maxLength": 71,
      "minLength": 1,
      "pattern": "^sha256:[0-9a-f]{64}$"
    }
  },
  "additionalProperties": false,
  "required": [
    "revision",
    "model_revision",
    "generated_at",
    "agents"
  ],
  "$defs": {
    "AgentDescriptor": {
      "type": "object",
      "properties": {
        "delegation_targets": {
          "type": "array",
          "items": {
            "type": "string",
            "maxLength": 64,
            "minLength": 1,
            "pattern": "^[a-z0-9](?:[a-z0-9]|-(?=[a-z0-9]))*$"
          },
          "maxItems": 256
        },
        "description": {
          "type": "string",
          "maxLength": 512,
          "minLength": 1,
          "pattern": "^(?=.*\\S)[^\\p{Cc}\\p{Cf}]+$"
        },
        "enabled": {
          "type": "boolean"
        },
        "id": {
          "type": "string",
          "maxLength": 64,
          "minLength": 1,
          "pattern": "^[a-z0-9](?:[a-z0-9]|-(?=[a-z0-9]))*$"
        },
        "mode": {
          "$ref": "#/$defs/AgentMode"
        },
        "resolved_fallback": {
          "type": "array",
          "items": {
            "description": "One exact base or named-variant model selection.",
            "type": "object",
            "properties": {
              "model": {
                "type": "string",
                "maxLength": 512,
                "minLength": 3,
                "pattern": "^[a-z0-9._-]{1,128}/[^/\\u0000-\\u0020\\u007f](?:[^/\\u0000-\\u001f\\u007f]{0,382}[^/\\u0000-\\u0020\\u007f])?$"
              },
              "variant": {
                "type": [
                  "string",
                  "null"
                ],
                "maxLength": 64,
                "minLength": 1,
                "pattern": "^(?!base$)[a-z0-9._-]+$"
              }
            },
            "additionalProperties": false,
            "required": [
              "model",
              "variant"
            ]
          },
          "maxItems": 256
        },
        "runnable_as_root": {
          "type": "boolean"
        },
        "tools": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/ToolName"
          },
          "maxItems": 256
        }
      },
      "additionalProperties": false,
      "required": [
        "id",
        "description",
        "mode",
        "enabled",
        "runnable_as_root",
        "resolved_fallback",
        "tools",
        "delegation_targets"
      ]
    },
    "AgentMode": {
      "type": "string",
      "enum": [
        "primary",
        "subagent",
        "all"
      ]
    },
    "ToolName": {
      "type": "string",
      "enum": [
        "read",
        "write",
        "edit",
        "bash",
        "grep",
        "glob"
      ]
    }
  }
}
