crates/protocol/src/snapshots/cookie_agent_protocol__tests__agent_list_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "AgentListResult::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { AgentDescriptor } from "./AgentDescriptor";
import type { SnapshotRevision } from "./SnapshotRevision";

export type AgentListResult = { revision: SnapshotRevision, model_revision: SnapshotRevision, generated_at: string, agents: Array<AgentDescriptor>, };
