crates/protocol/src/snapshots/cookie_agent_protocol__tests__agent_snapshot_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "AgentSnapshot::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { AgentDocumentSource } from "./AgentDocumentSource";
import type { AgentMode } from "./AgentMode";
import type { AgentSchemaVersion } from "./AgentSchemaVersion";
import type { FrozenDelegationPolicy } from "./FrozenDelegationPolicy";
import type { FrozenModelBinding } from "./FrozenModelBinding";
import type { PermissionRule } from "./PermissionRule";
import type { Sha256Digest } from "./Sha256Digest";
import type { ToolName } from "./ToolName";

export type AgentSnapshot = { agent: AgentId, schema: AgentSchemaVersion, mode: AgentMode, description: string, document_source: AgentDocumentSource, document_fingerprint: Sha256Digest, composed_prompt: string, prompt_fingerprint: Sha256Digest, tools: Array<ToolName>, permissions: Array<PermissionRule>, delegation: FrozenDelegationPolicy | null, fallback_chain: Array<FrozenModelBinding>, selected_suffix_start: number, };
