crates/protocol/src/snapshots/cookie_agent_protocol__tests__approval_request_schema_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: schema_for!(ApprovalRequest)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ApprovalRequest",
  "description": "Immutable request payload presented to clients.",
  "type": "object",
  "properties": {
    "approval_id": {
      "type": "string",
      "format": "uuid"
    },
    "constraints": {
      "$ref": "#/$defs/ApprovalConstraints"
    },
    "evaluations": {
      "type": "array",
      "items": {
        "$ref": "#/$defs/ApprovalEvaluation"
      }
    },
    "operation": {
      "$ref": "#/$defs/PreparedOperationIdentity"
    },
    "operation_fingerprint": {
      "$ref": "#/$defs/OperationFingerprint"
    },
    "revision": {
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    },
    "trigger": {
      "$ref": "#/$defs/ApprovalTrigger"
    }
  },
  "additionalProperties": false,
  "required": [
    "approval_id",
    "revision",
    "trigger",
    "operation_fingerprint",
    "operation",
    "evaluations",
    "constraints"
  ],
  "$defs": {
    "ActionKind": {
      "description": "A permission capability used by configured rules and runtime approvals.",
      "type": "string",
      "enum": [
        "read",
        "write",
        "bash",
        "grep",
        "glob",
        "delegate",
        "external_directory"
      ]
    },
    "ApprovalBoundary": {
      "description": "Matching boundary for one canonical resource. Clients cannot edit it.",
      "oneOf": [
        {
          "type": "object",
          "properties": {
            "type": {
              "type": "string",
              "const": "exact"
            }
          },
          "additionalProperties": false,
          "required": [
            "type"
          ]
        },
        {
          "type": "object",
          "properties": {
            "prefix": {
              "type": "string"
            },
            "type": {
              "type": "string",
              "const": "command_prefix"
            }
          },
          "additionalProperties": false,
          "required": [
            "type",
            "prefix"
          ]
        },
        {
          "type": "object",
          "properties": {
            "root_session_id": {
              "type": "string",
              "format": "uuid"
            },
            "type": {
              "type": "string",
              "const": "delegation_tree"
            }
          },
          "additionalProperties": false,
          "required": [
            "type",
            "root_session_id"
          ]
        }
      ]
    },
    "ApprovalCapability": {
      "description": "One capability required by the exact operation.",
      "type": "object",
      "properties": {
        "action": {
          "$ref": "#/$defs/ActionKind"
        },
        "operation": {
          "description": "Stable semantic prepared-capability operation; never a raw path, descriptor, or temp name.",
          "type": "string",
          "maxLength": 512,
          "minLength": 1,
          "pattern": "^[a-z0-9][a-z0-9._:-]*$"
        }
      },
      "additionalProperties": false,
      "required": [
        "action",
        "operation"
      ]
    },
    "ApprovalConstraints": {
      "description": "Server-authored response constraints. There is intentionally no scope editor.",
      "type": "object",
      "properties": {
        "allow_once": {
          "type": "boolean"
        },
        "allow_tree_grant": {
          "type": "boolean"
        },
        "cancellable": {
          "type": "boolean"
        },
        "expires_at": {
          "type": [
            "string",
            "null"
          ],
          "format": "date-time"
        }
      },
      "additionalProperties": false,
      "required": [
        "allow_once",
        "allow_tree_grant",
        "cancellable"
      ]
    },
    "ApprovalEvaluation": {
      "description": "One permission evaluation retained for an approval resource.",
      "type": "object",
      "properties": {
        "effect": {
          "$ref": "#/$defs/Effect"
        },
        "resource_digest": {
          "$ref": "#/$defs/PreparedResourceDigest"
        },
        "trace": {
          "$ref": "#/$defs/DecisionTrace"
        }
      },
      "additionalProperties": false,
      "required": [
        "resource_digest",
        "effect",
        "trace"
      ]
    },
    "ApprovalResourceSource": {
      "description": "Why a resource is part of an approval request.",
      "type": "string",
      "enum": [
        "primary_operation",
        "secondary_operation",
        "external_directory_guard",
        "model_request",
        "doom_loop_guard"
      ]
    },
    "ApprovalTrigger": {
      "description": "What caused approval evaluation to begin.",
      "type": "string",
      "enum": [
        "permission_policy",
        "model_tool_approval",
        "internal_agent",
        "doom_loop"
      ]
    },
    "DecisionTrace": {
      "description": "Complete derivation of a permission decision.",
      "type": "object",
      "properties": {
        "action": {
          "$ref": "#/$defs/ActionKind"
        },
        "candidates": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/MatchedPermissionRule"
          }
        },
        "effect": {
          "$ref": "#/$defs/Effect"
        },
        "normalized_resource": {
          "type": "string"
        },
        "precedence_reason": {
          "type": "string"
        }
      },
      "additionalProperties": false,
      "required": [
        "action",
        "normalized_resource",
        "candidates",
        "effect",
        "precedence_reason"
      ]
    },
    "Effect": {
      "description": "The result of a configured permission rule evaluation.",
      "type": "string",
      "enum": [
        "allow",
        "ask",
        "deny"
      ]
    },
    "MatchedPermissionRule": {
      "description": "A candidate rule retained for client-visible permission explanations.",
      "type": "object",
      "properties": {
        "effect": {
          "$ref": "#/$defs/Effect"
        },
        "rule_id": {
          "type": [
            "string",
            "null"
          ]
        },
        "source_layer": {
          "type": "string"
        }
      },
      "required": [
        "source_layer",
        "effect"
      ]
    },
    "OperationFingerprint": {
      "description": "The exact canonical operation fingerprint used for idempotency and consent.",
      "type": "object",
      "properties": {
        "digest": {
          "type": "string",
          "maxLength": 64,
          "minLength": 64,
          "pattern": "^[0-9a-f]{64}$"
        }
      },
      "additionalProperties": false,
      "required": [
        "digest"
      ]
    },
    "PreparedApprovalResource": {
      "description": "One immutable prepared canonical resource disclosed by an approval request.\n`source` is provenance only and never contributes to operation identity.",
      "type": "object",
      "properties": {
        "binding_digest": {
          "$ref": "#/$defs/PreparedResourceDigest"
        },
        "binding_lifetime": {
          "$ref": "#/$defs/PreparedBindingLifetime"
        },
        "boundary": {
          "$ref": "#/$defs/ApprovalBoundary"
        },
        "canonical": {
          "description": "Stable logical prepared-resource identity; never a raw path, descriptor, or temp name.",
          "type": "string",
          "maxLength": 512,
          "minLength": 1,
          "pattern": "^[a-z0-9][a-z0-9._:-]*$"
        },
        "capability": {
          "$ref": "#/$defs/ActionKind"
        },
        "source": {
          "$ref": "#/$defs/ApprovalResourceSource"
        }
      },
      "additionalProperties": false,
      "required": [
        "capability",
        "canonical",
        "binding_digest",
        "binding_lifetime",
        "boundary",
        "source"
      ]
    },
    "PreparedBindingLifetime": {
      "description": "Restart stability of a prepared resource binding. Filesystem descriptor\nbindings are process-local and cannot back durable tree grants.",
      "type": "string",
      "enum": [
        "process_local",
        "restart_stable"
      ]
    },
    "PreparedCapabilityLifetime": {
      "description": "Prepared execution capabilities exist only in the preparing daemon process.",
      "type": "string",
      "enum": [
        "process_local"
      ]
    },
    "PreparedOperationIdentity": {
      "description": "Complete canonical identity of one prepared tool operation. Arguments are\nrepresented by the digest of their normalized, resource-reference form so\nraw paths and process-local descriptor/temp identifiers never enter the\ndurable identity.",
      "type": "object",
      "properties": {
        "capabilities": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/ApprovalCapability"
          }
        },
        "capability_lifetime": {
          "$ref": "#/$defs/PreparedCapabilityLifetime"
        },
        "execution_context_digest": {
          "type": "string",
          "maxLength": 64,
          "minLength": 64,
          "pattern": "^[0-9a-f]{64}$"
        },
        "normalized_arguments_digest": {
          "type": "string",
          "maxLength": 64,
          "minLength": 64,
          "pattern": "^[0-9a-f]{64}$"
        },
        "resources": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/PreparedApprovalResource"
          }
        }
      },
      "additionalProperties": false,
      "required": [
        "normalized_arguments_digest",
        "capabilities",
        "resources",
        "execution_context_digest",
        "capability_lifetime"
      ]
    },
    "PreparedResourceDigest": {
      "description": "Domain-separated SHA-256 digest binding an immutable prepared resource to\nthe exact process-local capability held by the engine.",
      "type": "object",
      "properties": {
        "digest": {
          "type": "string",
          "maxLength": 64,
          "minLength": 64,
          "pattern": "^[0-9a-f]{64}$"
        }
      },
      "additionalProperties": false,
      "required": [
        "digest"
      ]
    }
  }
}
