crates/protocol/src/snapshots/cookie_agent_protocol__tests__approval_request_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "ApprovalRequest::export_to_string(&typescript_config()).expect(\"export approval request TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ApprovalConstraints } from "./ApprovalConstraints";
import type { ApprovalEvaluation } from "./ApprovalEvaluation";
import type { ApprovalId } from "./ApprovalId";
import type { ApprovalTrigger } from "./ApprovalTrigger";
import type { OperationFingerprint } from "./OperationFingerprint";
import type { PreparedOperationIdentity } from "./PreparedOperationIdentity";

/**
 * Immutable request payload presented to clients.
 */
export type ApprovalRequest = { approval_id: ApprovalId, revision: number, trigger: ApprovalTrigger, operation_fingerprint: OperationFingerprint, operation: PreparedOperationIdentity, evaluations: Array<ApprovalEvaluation>, constraints: ApprovalConstraints, };
