crates/protocol/src/snapshots/cookie_agent_protocol__tests__approval_respond_schema.snap
---
source: crates/protocol/src/tests.rs
expression: schema_for!(ApprovalRespondParams)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ApprovalRespondParams",
  "type": "object",
  "properties": {
    "approval_id": {
      "type": "string",
      "format": "uuid"
    },
    "client_response_id": {
      "description": "Bounded approval response idempotency key.",
      "type": "string",
      "maxLength": 256,
      "minLength": 1,
      "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
    },
    "decision": {
      "$ref": "#/$defs/ApprovalUserDecision"
    },
    "feedback": {
      "anyOf": [
        {
          "$ref": "#/$defs/ApprovalFeedback"
        },
        {
          "type": "null"
        }
      ]
    },
    "operation_fingerprint": {
      "$ref": "#/$defs/OperationFingerprint"
    },
    "request_revision": {
      "type": "integer",
      "format": "uint64",
      "minimum": 1
    },
    "session_id": {
      "type": "string",
      "format": "uuid"
    }
  },
  "additionalProperties": false,
  "required": [
    "session_id",
    "approval_id",
    "request_revision",
    "operation_fingerprint",
    "client_response_id",
    "decision"
  ],
  "$defs": {
    "ApprovalFeedback": {
      "type": "object",
      "properties": {
        "message": {
          "description": "Control-free bounded safe error text.",
          "type": "string",
          "maxLength": 4096,
          "minLength": 1,
          "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
        }
      },
      "additionalProperties": false,
      "required": [
        "message"
      ]
    },
    "ApprovalUserDecision": {
      "type": "string",
      "enum": [
        "approve_once",
        "approve_tree",
        "reject",
        "cancel"
      ]
    },
    "OperationFingerprint": {
      "type": "object",
      "properties": {
        "digest": {
          "type": "string",
          "maxLength": 64,
          "minLength": 64,
          "pattern": "^[0-9a-f]{64}$"
        }
      },
      "additionalProperties": false,
      "required": [
        "digest"
      ]
    }
  }
}
