crates/protocol/src/snapshots/cookie_agent_protocol__tests__approval_respond_schema_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: schema_for!(ApprovalRespondParams)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ApprovalRespondParams",
  "description": "Parameters for `approval.respond`. The response is idempotent by\n`client_response_id`; grant boundaries are never client-editable.",
  "type": "object",
  "properties": {
    "approval_id": {
      "type": "string",
      "format": "uuid"
    },
    "client_response_id": {
      "type": "string"
    },
    "decision": {
      "$ref": "#/$defs/ApprovalUserDecision"
    },
    "feedback": {
      "anyOf": [
        {
          "$ref": "#/$defs/ApprovalFeedback"
        },
        {
          "type": "null"
        }
      ]
    },
    "operation_fingerprint": {
      "$ref": "#/$defs/OperationFingerprint"
    },
    "request_revision": {
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    },
    "session_id": {
      "type": "string",
      "format": "uuid"
    }
  },
  "additionalProperties": false,
  "required": [
    "session_id",
    "approval_id",
    "request_revision",
    "operation_fingerprint",
    "client_response_id",
    "decision"
  ],
  "$defs": {
    "ApprovalFeedback": {
      "description": "Optional human feedback associated with a user decision.",
      "type": "object",
      "properties": {
        "message": {
          "type": "string"
        }
      },
      "additionalProperties": false,
      "required": [
        "message"
      ]
    },
    "ApprovalUserDecision": {
      "description": "A user's constrained response. Grant boundaries remain server-authored.",
      "type": "string",
      "enum": [
        "approve_once",
        "approve_tree",
        "reject",
        "cancel"
      ]
    },
    "OperationFingerprint": {
      "description": "The exact canonical operation fingerprint used for idempotency and consent.",
      "type": "object",
      "properties": {
        "digest": {
          "type": "string",
          "maxLength": 64,
          "minLength": 64,
          "pattern": "^[0-9a-f]{64}$"
        }
      },
      "additionalProperties": false,
      "required": [
        "digest"
      ]
    }
  }
}
