crates/protocol/src/snapshots/cookie_agent_protocol__tests__approval_respond_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "ApprovalRespondParams::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ApprovalFeedback } from "./ApprovalFeedback";
import type { ApprovalId } from "./ApprovalId";
import type { ApprovalUserDecision } from "./ApprovalUserDecision";
import type { ClientResponseId } from "./ClientResponseId";
import type { OperationFingerprint } from "./OperationFingerprint";
import type { SessionId } from "./SessionId";

export type ApprovalRespondParams = { session_id: SessionId, approval_id: ApprovalId, request_revision: number, operation_fingerprint: OperationFingerprint, client_response_id: ClientResponseId, decision: ApprovalUserDecision, feedback?: ApprovalFeedback | null, };
