crates/protocol/src/snapshots/cookie_agent_protocol__tests__approval_respond_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "ApprovalRespondParams::export_to_string(&typescript_config()).expect(\"export approval response TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ApprovalFeedback } from "./ApprovalFeedback";
import type { ApprovalId } from "./ApprovalId";
import type { ApprovalUserDecision } from "./ApprovalUserDecision";
import type { OperationFingerprint } from "./OperationFingerprint";
import type { SessionId } from "./SessionId";

/**
 * Parameters for `approval.respond`. The response is idempotent by
 * `client_response_id`; grant boundaries are never client-editable.
 */
export type ApprovalRespondParams = { session_id: SessionId, approval_id: ApprovalId, request_revision: number, operation_fingerprint: OperationFingerprint, client_response_id: string, decision: ApprovalUserDecision, feedback?: ApprovalFeedback | null, };
