crates/protocol/src/snapshots/cookie_agent_protocol__tests__catalog_model_list_schema_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: schema_for!(CatalogModelListResult)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "CatalogModelListResult",
  "description": "Result for `catalog.model.list`.",
  "type": "object",
  "properties": {
    "models": {
      "type": "array",
      "items": {
        "$ref": "#/$defs/CatalogModel"
      }
    },
    "snapshot": {
      "$ref": "#/$defs/CatalogSnapshot"
    }
  },
  "additionalProperties": false,
  "required": [
    "snapshot",
    "models"
  ],
  "$defs": {
    "CatalogModel": {
      "description": "One provider-specific models.dev model projection.",
      "type": "object",
      "properties": {
        "canonical_model_id": {
          "type": [
            "string",
            "null"
          ]
        },
        "capabilities": {
          "$ref": "#/$defs/CatalogModelCapabilities"
        },
        "family": {
          "type": [
            "string",
            "null"
          ]
        },
        "last_updated": {
          "type": "string"
        },
        "limits": {
          "$ref": "#/$defs/CatalogModelLimits"
        },
        "modalities": {
          "$ref": "#/$defs/CatalogModelModalities"
        },
        "model_id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "provider_id": {
          "type": "string"
        },
        "release_date": {
          "type": "string"
        },
        "status": {
          "$ref": "#/$defs/CatalogModelStatus"
        }
      },
      "additionalProperties": false,
      "required": [
        "provider_id",
        "model_id",
        "name",
        "capabilities",
        "limits",
        "modalities",
        "status",
        "release_date",
        "last_updated"
      ]
    },
    "CatalogModelCapabilities": {
      "description": "Safe catalog capability flags.",
      "type": "object",
      "properties": {
        "attachment": {
          "type": "boolean"
        },
        "reasoning": {
          "type": "boolean"
        },
        "structured_output": {
          "type": "boolean"
        },
        "temperature": {
          "type": "boolean"
        },
        "tool_call": {
          "type": "boolean"
        }
      },
      "additionalProperties": false,
      "required": [
        "attachment",
        "reasoning",
        "tool_call",
        "structured_output",
        "temperature"
      ]
    },
    "CatalogModelLimits": {
      "description": "Catalog token limits.",
      "type": "object",
      "properties": {
        "context": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "input": {
          "type": [
            "integer",
            "null"
          ],
          "format": "uint64",
          "minimum": 0
        },
        "output": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        }
      },
      "additionalProperties": false,
      "required": [
        "context",
        "output"
      ]
    },
    "CatalogModelModalities": {
      "description": "Catalog input and output modalities.",
      "type": "object",
      "properties": {
        "input": {
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "output": {
          "type": "array",
          "items": {
            "type": "string"
          }
        }
      },
      "additionalProperties": false,
      "required": [
        "input",
        "output"
      ]
    },
    "CatalogModelStatus": {
      "description": "Catalog model lifecycle status.",
      "type": "string",
      "enum": [
        "stable",
        "alpha",
        "beta",
        "deprecated"
      ]
    },
    "CatalogSnapshot": {
      "description": "Immutable source snapshot identity for models.dev catalog projections.",
      "type": "object",
      "properties": {
        "fetched_at": {
          "type": "string",
          "format": "date-time"
        },
        "revision": {
          "type": "string"
        },
        "source": {
          "type": "string"
        }
      },
      "additionalProperties": false,
      "required": [
        "revision",
        "source",
        "fetched_at"
      ]
    }
  }
}
