crates/protocol/src/snapshots/cookie_agent_protocol__tests__catalog_model_list_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "CatalogModelListResult::export_to_string(&ts_rs::Config::default()).expect(\"export catalog model list TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { CatalogModel } from "./CatalogModel";
import type { CatalogSnapshot } from "./CatalogSnapshot";

/**
 * Result for `catalog.model.list`.
 */
export type CatalogModelListResult = { snapshot: CatalogSnapshot, models: Array<CatalogModel>, };
